<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/background_light"
android:orientation="vertical"
tools:context=".HomePage">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="111dp"
        android:layout_height="96dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eduapark" />

<TextView
    android:id="@+id/textView"
    android:layout_width="166dp"
    android:layout_height="69dp"
    android:layout_marginTop="43sp"
    android:gravity="bottom|left"
    android:text="@string/edupark"
    android:textColor="@android:color/holo_blue_dark"
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.082"
    app:layout_constraintStart_toEndOf="@+id/imageView2"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="138dp"
        android:layout_height="43dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:gravity="fill"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginStart="15dp"
        android:gravity="center|center_horizontal|left"
        android:text="@string/new_user"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/create_account_btn"
        android:layout_width="162dp"
        android:layout_height="28dp"
        android:clickable="true"
        android:gravity="center|center_horizontal|left"
        android:text="@string/createaccount"
        android:textColor="?attr/colorError"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/emailid"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:background="@drawable/forgotemailstyle"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="#113f54 "
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_btn" />


    <EditText
        android:id="@+id/passwordid"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:background="@drawable/forgotemailstyle"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="125sp"
        android:layout_height="34sp"
        android:gravity="center|left"
        android:text="@string/password"
        android:textColor="#113f54 "
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailid" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="194dp"
        android:layout_height="29dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/butonstyle"
        android:text="@string/login"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordid" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="272dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="Login with Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_button" />

    <TextView
        android:id="@+id/forgot_pass_button"
        android:layout_width="185dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>