<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".ForgotPassword">

    <EditText
        android:id="@+id/resetemail_ID"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/forgotemailstyle"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="102dp"
        android:layout_marginTop="164dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eduapark" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="264dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/forgotpassword"
        android:textColor="?android:attr/colorForeground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/resetpassword"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/butonstyle"
        android:text="@string/send"
        android:textColor="#F2F4F4"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetemail_ID" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/butonstyle"
        android:text="Cancel"
        android:textColor="#F2F4F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetemail_ID" />


</androidx.constraintlayout.widget.ConstraintLayout>